--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "jquery": "^3.6.0",
     "luxon": "^2.2.0",
     "popper.js": "^1.16.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^12.2.0",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
