services that connect to firestore done > feature/firestore

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -36,7 +36,7 @@ rules:
         -   SwitchCase: 1
     linebreak-style:
         - error
-        - unix
+        - windows
     quotes:
         - error
         - single
