--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
-              "node_modules/@ctrl/ngx-emoji-mart/picker.css"
+              "node_modules/@ctrl/ngx-emoji-mart/picker.css",
+              "node_modules/video.js/dist/video-js.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
