--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "videojs-youtube": "^2.6.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@types/jasmine": "~3.8.0",
     "@types/luxon": "^2.0.8",
     "@types/node": "^12.11.1",
+    "@types/video.js": "^7.3.29",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^7.26.0",
@@ -60,6 +62,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "video.js": "^7.17.0"
   }
 }
