--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@fortawesome/fontawesome-svg-core": "~1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@types/color": "^3.0.2",
     "angular-popper": "^2.0.1",
     "bootstrap": "^4.5.0",
+    "color": "^4.2.0",
     "firebase": "^9.5.0",
     "jquery": "^3.6.0",
     "luxon": "^2.2.0",
